# agentciv

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  FUTURE_DIRECTIONS.md  LICENSE  README.md  config.yaml  config_compact.yaml  config_sonnet.yaml  pyproject.toml  requirements.txt
configs/: builders.yaml
data/exports/: manifest.json
docs/: DESIGN_PRINCIPLES.md
paper/: civilisation_as_innovation_engine.md  from_agent_teams_to_agent_civilisations.md  maslow_machines.md
provenance/: PROVENANCE.md  civilisation_as_innovation_engine.md.ots  commit_014487c.ots  commit_23689f3.ots  commit_682150a.ots  commit_899c3b6.ots  commit_a57db4c.ots  commit_b543bd3.ots  commit_d49d5dd.ots  commit_e980ce0.ots  commit_fa54041.ots  from_agent_teams_to_agent_civilisations.md.ots  maslow_machines.md.ots
scripts/: export_replay.py  generate_figures.py  generate_test_replay.py  interview_agents.py  process_data.py  run.py
src/: cli.py  config.py  config_builder.py  dashboard.py  gardener.py  natural_config.py  types.py
src/agents/: __init__.py  agent.py  agentic_loop.py  communication.py  decision.py  drives.py  innovation.py  llm.py  memory.py  perception.py  specialisation.py
src/api/: converters.py  routes.py  schemas.py  server.py  websocket.py
src/engine/: __init__.py  composition.py  environment.py  feedback.py  persistence.py  structures.py  tick.py  world.py
src/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
src/mcp/: __init__.py  __main__.py  display.py  server.py
src/metrics/: __init__.py  emergence.py  run_record.py
src/presets/: abundant.yaml  competitive.yaml  cooperative.yaml  (+9 more)
(+227 files in other folders)
