[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "agentciv-sim"
version = "0.2.0"
description = "AI civilisation simulation — Maslow-driven agents forming emergent societies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Mark E. Mala"},
]
keywords = [
    "ai", "agents", "simulation", "emergence", "civilisation",
    "multi-agent", "maslow", "collective-intelligence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.30",
    "openai>=1.0",
    "pydantic>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "rich>=13.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
agentciv-sim = "src.cli:main"
agentciv-sim-mcp = "src.mcp:run_server"

[project.urls]
Homepage = "https://agentciv.ai"
Repository = "https://github.com/wonderben-code/agent-civilisation"
Documentation = "https://agentciv.ai/simulation"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["presets/*.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 100
